--- a/view/zfc-datagrid/toolbar/export.phtml
+++ b/view/zfc-datagrid/toolbar/export.phtml
@@ -12,8 +12,8 @@ foreach($this->parameters as $name => $value){
 foreach($this->exportRenderers as $type => $name){
     $urlExport = $url . '?' . $this->generalParameterNames['rendererType'] . '=' . $type . $parametersAdd;
 ?>
-    <a class="btn" href="<?= $urlExport; ?>">
-        <?= $name; ?>
+    <a class="btn" href="<?php echo $urlExport; ?>">
+        <?php echo $name; ?>
     </a>
 <?php 
 }
