--- a/view/zfc-datagrid/toolbar/toolbar.phtml
+++ b/view/zfc-datagrid/toolbar/toolbar.phtml
@@ -3,7 +3,7 @@
     <!-- Actions (add, ...) -->
     <div class="span2">
         <a class="btn btn-primary">
-            <?= $this->translate('Add'); ?>
+            <?php echo $this->translate('Add'); ?>
         </a>
     </div>
     
@@ -17,7 +17,7 @@
     
     <!-- Export buttons -->
     <div class="span4 text-right">
-        <?= $this->partial('zfc-datagrid/toolbar/export');?>
+        <?php echo $this->partial('zfc-datagrid/toolbar/export');?>
     </div>
     
 </div>
