--- a/view/zfc-datagrid/renderer/jqGrid/layout.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/layout.phtml
@@ -39,23 +39,23 @@ if($this->rowClickAction){
 }
 ?>
 
-<?= $this->partial($this->templateToolbar);?>
+<?php echo $this->partial($this->templateToolbar);?>
 
-<table id="<?= $this->gridId; ?>" class="<?= implode(' ', $tableClasses); ?>"></table>
-<div id="<?= $this->gridId; ?>_pager"></div>
-<iframe name="<?= $this->gridId; ?>_fileFrame" id="<?= $this->gridId; ?>_fileFrame" src="about:none" style="display: none;"></iframe>
+<table id="<?php echo $this->gridId; ?>" class="<?php echo implode(' ', $tableClasses); ?>"></table>
+<div id="<?php echo $this->gridId; ?>_pager"></div>
+<iframe name="<?php echo $this->gridId; ?>_fileFrame" id="<?php echo $this->gridId; ?>_fileFrame" src="about:none" style="display: none;"></iframe>
 
-<input type="hidden" id="<?= $this->gridId.'_'.$parameterNames['columnsHidden']; ?>" name="<?= $this->gridId.'_'.$parameterNames['columnsHidden']; ?>" value="<?= implode(',',$this->columnsHidden); ?>" />
-<input type="hidden" id="<?= $this->gridId.'_'.$parameterNames['columnsGroupByLocal']; ?>" name="<?= $this->gridId.'_'.$parameterNames['columnsGroupByLocal']; ?>" value="" />
+<input type="hidden" id="<?php echo $this->gridId.'_'.$parameterNames['columnsHidden']; ?>" name="<?php echo $this->gridId.'_'.$parameterNames['columnsHidden']; ?>" value="<?php echo implode(',',$this->columnsHidden); ?>" />
+<input type="hidden" id="<?php echo $this->gridId.'_'.$parameterNames['columnsGroupByLocal']; ?>" name="<?php echo $this->gridId.'_'.$parameterNames['columnsGroupByLocal']; ?>" value="" />
 
 <script>
-var grid_<?= $this->gridId; ?>_columnsRowClickDisabled = <?= json_encode($this->columnsRowClickDisabled) ?>;
+var grid_<?php echo $this->gridId; ?>_columnsRowClickDisabled = <?php echo json_encode($this->columnsRowClickDisabled) ?>;
 
-var grid_<?= $this->gridId; ?> = $('#<?= $this->gridId; ?>').jqGrid({
+var grid_<?php echo $this->gridId; ?> = $('#<?php echo $this->gridId; ?>').jqGrid({
 
-	url: '<?= $url; ?>',
+	url: '<?php echo $url; ?>',
 
-	caption: '<?= $this->title; ?>',
+	caption: '<?php echo $this->title; ?>',
 
 	height: 'auto',
 	autowidth : true,
@@ -68,15 +68,15 @@ var grid_<?= $this->gridId; ?> = $('#<?= $this->gridId; ?>').jqGrid({
     grouping: true,
 //     multiSort: true,
     
-    rowNum: <?= $this->paginator->getItemCountPerPage();?>,
+    rowNum: <?php echo $this->paginator->getItemCountPerPage();?>,
     	    
 	mtype : 'POST',
     postData: {
-    	<?= $parameterNames['columnsHidden']?>: function(){
-            return $('#<?= $this->gridId.'_'.$parameterNames['columnsHidden']; ?>').val();
+    	<?php echo $parameterNames['columnsHidden']?>: function(){
+            return $('#<?php echo $this->gridId.'_'.$parameterNames['columnsHidden']; ?>').val();
         },
-        <?= $parameterNames['columnsGroupByLocal']?>: function(){
-            return $('#<?= $this->gridId.'_'.$parameterNames['columnsGroupByLocal']; ?>').val();
+        <?php echo $parameterNames['columnsGroupByLocal']?>: function(){
+            return $('#<?php echo $this->gridId.'_'.$parameterNames['columnsGroupByLocal']; ?>').val();
         }
         <?php
         if(count($parametersHtml) > 0){
@@ -87,20 +87,20 @@ var grid_<?= $this->gridId; ?> = $('#<?= $this->gridId; ?>').jqGrid({
     },
 	
 	
-	sortname: '<?= $this->activeParameters[$parameterNames['sortColumns']]; ?>',
-	sortorder: '<?= $this->activeParameters[$parameterNames['sortDirections']]; ?>',
+	sortname: '<?php echo $this->activeParameters[$parameterNames['sortColumns']]; ?>',
+	sortorder: '<?php echo $this->activeParameters[$parameterNames['sortDirections']]; ?>',
 	
 	prmNames : {
-		page: '<?= $parameterNames['currentPage']; ?>',
-		rows: '<?= $parameterNames['itemsPerPage']; ?>',
-		sort: '<?= $parameterNames['sortColumns']; ?>',
-		order: '<?= $parameterNames['sortDirections']; ?>',
-		search: '<?= $parameterNames['isSearch']; ?>',
+		page: '<?php echo $parameterNames['currentPage']; ?>',
+		rows: '<?php echo $parameterNames['itemsPerPage']; ?>',
+		sort: '<?php echo $parameterNames['sortColumns']; ?>',
+		order: '<?php echo $parameterNames['sortDirections']; ?>',
+		search: '<?php echo $parameterNames['isSearch']; ?>',
 	},
 	
-	pager : '#<?= $this->gridId; ?>_pager',
+	pager : '#<?php echo $this->gridId; ?>_pager',
 
-    colModel: <?= $this->jqgridColumns($this->columns); ?>,
+    colModel: <?php echo $this->jqgridColumns($this->columns); ?>,
 
     datatype : 'local',
     jsonReader : {
@@ -110,17 +110,17 @@ var grid_<?= $this->gridId; ?> = $('#<?= $this->gridId; ?>').jqGrid({
 
     <?php if($rowClickLink != ''): ?>
         onSelectRow: function(rowId, status, e){
-            var rowClickLink = '<?= $rowClickLink; ?>';
-            rowClickLink = rowClickLink.replace('<?= Button::ROW_ID_PLACEHOLDER; ?>', rowId);
+            var rowClickLink = '<?php echo $rowClickLink; ?>';
+            rowClickLink = rowClickLink.replace('<?php echo Button::ROW_ID_PLACEHOLDER; ?>', rowId);
             window.location.href = rowClickLink;
         },
     <?php endif; ?>
 
     beforeSelectRow: function (rowId, e) {
-    	var colModel = grid_<?= $this->gridId; ?>.jqGrid('getGridParam','colModel');
+    	var colModel = grid_<?php echo $this->gridId; ?>.jqGrid('getGridParam','colModel');
     	var name = colModel[$.jgrid.getCellIndex(e.target)];
 
-    	if (grid_<?= $this->gridId; ?>_columnsRowClickDisabled.indexOf(name.index) >= 0) {
+    	if (grid_<?php echo $this->gridId; ?>_columnsRowClickDisabled.indexOf(name.index) >= 0) {
             return false;
         }
         
@@ -128,17 +128,17 @@ var grid_<?= $this->gridId; ?> = $('#<?= $this->gridId; ?>').jqGrid({
     }
 });
 <?php if($this->isUserFilterEnabled === true):?>
-    grid_<?= $this->gridId; ?>.jqGrid('filterToolbar');
+    grid_<?php echo $this->gridId; ?>.jqGrid('filterToolbar');
 <?php endif; ?>
 
-grid_<?= $this->gridId; ?>.jqGrid('setGridParam', {
+grid_<?php echo $this->gridId; ?>.jqGrid('setGridParam', {
     datatype : 'json'
 }).trigger('reload');
-grid_<?= $this->gridId; ?>.jqGrid()[0].addJSONData(<?= json_encode($this->data); ?>);
-grid_<?= $this->gridId; ?>.trigger('reload');
+grid_<?php echo $this->gridId; ?>.jqGrid()[0].addJSONData(<?php echo json_encode($this->data); ?>);
+grid_<?php echo $this->gridId; ?>.trigger('reload');
 
 //This is needed to load the data with ajax!
-grid_<?= $this->gridId; ?>.jqGrid('setGridParam', {
+grid_<?php echo $this->gridId; ?>.jqGrid('setGridParam', {
     jsonReader : {
         repeatitems : false,
         id : 'idConcated',
