--- a/view/zfc-datagrid/renderer/printHtml/layout.phtml
+++ b/view/zfc-datagrid/renderer/printHtml/layout.phtml
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title><?= $this->title; ?></title>
+    <title><?php echo $this->title; ?></title>
     
     <style>
     thead {
