--- a/view/zfc-datagrid/renderer/printHtml/table.phtml
+++ b/view/zfc-datagrid/renderer/printHtml/table.phtml
@@ -2,7 +2,7 @@
     <thead>
         <tr>
             <?php foreach($this->columns as $column): ?>
-                <td><?= $column->getLabel(); ?></td>
+                <td><?php echo $column->getLabel(); ?></td>
             <?php endforeach; ?>
         </tr>
     </thead>
@@ -11,7 +11,7 @@
         <?php foreach($this->data as $row):?>
             <tr>
             <?php foreach($this->columns as $column): ?>
-                <td><?= $row[$column->getUniqueId()]; ?></td>
+                <td><?php echo $row[$column->getUniqueId()]; ?></td>
             <?php endforeach; ?>
             </tr>
         <?php endforeach; ?>
