--- a/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
@@ -25,7 +25,7 @@ if($this->rowClickAction !== null){
 }
 ?>
 
-<?php echo $this->partial($this->templateToolbar);?>
+<?php echo $this->partial($this->templateToolbar, $this->templateToolbarParams);?>
 
 <table class="<?php echo implode(' ', $classes); ?>">
     <thead>
