Custom column formatter

--- a/view/zfc-datagrid/renderer/jqGrid/layout.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/layout.phtml
@@ -1,5 +1,6 @@
 <?php 
 use ZfcDatagrid\Column\Action\Button;
+use ZfcDatagrid\Filter;
 
 $parameterNames = $this->optionsRenderer['parameterNames'];
 
