Adding table classes definition function

--- a/view/zfc-datagrid/renderer/jqGrid/layout.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/layout.phtml
@@ -30,7 +30,7 @@ foreach($this->parameters as $name => $value){
     $parametersHtml []= $name.': \''.$value.'\'';
 }
 
-$tableClasses = array();
+$tableClasses = $this->tableClasses;
 
 $rowClickLink = '';
 if($this->rowClickAction){
