--- a/view/zfc-datagrid/toolbar/toolbar.phtml
+++ b/view/zfc-datagrid/toolbar/toolbar.phtml
@@ -2,17 +2,13 @@
 
     <!-- Actions (add, ...) -->
     <div class="span2">
-        <a class="btn btn-primary">
-            <?php echo $this->translate('Add'); ?>
-        </a>
+        Here your can add global actions like "Add".<br />
+        Change the toolbar with $grid-&gt;setToolbarTemplate('my-path/awesome-list/grid-toolbar');
     </div>
     
     <!-- Anything else (filter, ...) -->
     <div class="span6">
-<!--         <div data-toggle="buttons-radio" class="btn-group" id="togglePicturestabs-2_grid"> -->
-<!--             <button value="true" class="btn" type="button">Ja</button> -->
-<!--             <button value="false" class="btn active" type="button">Nein</button> -->
-<!--         </div> -->
+        E.g. you could add here custom filters from a select element
     </div>
     
     <!-- Export buttons -->
