Filter Select (with int index array options)

--- a/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
@@ -119,6 +119,8 @@ if($this->rowClickAction !== null){
                             foreach ($column->getFilterSelectOptions() as $value => $option) {
                                 if ($column->getFilterActiveValue() == sprintf($column->getFilterDefaultOperation(), $value)) {
                                     $htmlFilter .= '<option value="' . $value . '" selected="selected">' . $option . '</option>';
+                                } else if (($column->getFilterActiveValue() == '') && ($value == '')){
+                                    $htmlFilter .= '<option value="' . $value . '" selected="selected">' . $option . '</option>';
                                 } else {
                                     $htmlFilter .= '<option value="' . $value . '">' . $option . '</option>';
                                 }
