--- a/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
@@ -4,6 +4,19 @@ use ZfcDatagrid\Column\Type;
 use ZfcDatagrid\Column\Style;
 ?>
 
+<?php $this->headScript()->captureStart();?>
+$(function(){
+    <?php //If daterange bootstrapTable filter is enable show it ?>
+    <?php if ($this->daterangeEnabled): ?>
+        $('input.daterange').daterangepicker(
+        <?= Zend\Json\Json::encode($this->daterangeParameters, false, array('enableJsonExprFinder' => true)); ?>
+        ).on('apply.daterangepicker', function(ev,picker){
+            this.form.submit();
+        });
+    <?php endif; ?>
+});
+<?php $this->headScript()->captureEnd(); ?>
+
 <form name="form_<?php echo $this->gridId; ?>" method="post" action="<?php echo $this->url(null, array(), array(), true); ?>">
 
     <input type="submit" style="width: 0px; height:0px; margin: 0; padding: 0; border: 0;" name="hiddenSubmit" />
@@ -115,7 +128,7 @@ if($this->rowClickAction !== null){
                     if ($column->isUserFilterEnabled() === true) {
 
                         if ($column->hasFilterSelectOptions() === true) {
-                            $htmlFilter = '<select name="toolbarFilters[' . $column->getUniqueId() . ']" style="width: 80%" onchange="this.form.submit()">';
+                            $htmlFilter = '<select name="toolbarFilters[' . $column->getUniqueId() . ']" style="width: 80%" onchange="this.form.submit()" >';
                             foreach ($column->getFilterSelectOptions() as $value => $option) {
                                 if ($column->getFilterActiveValue() == sprintf($column->getFilterDefaultOperation(), $value)) {
                                     $htmlFilter .= '<option value="' . $value . '" selected="selected">' . $option . '</option>';
@@ -126,6 +139,9 @@ if($this->rowClickAction !== null){
                                 }
                             }
                             $htmlFilter .= '</select>';
+
+                        } else if ($column->getType() instanceof \ZfcDatagrid\Column\Type\DateTime){
+                            $htmlFilter = '<input type="text" name="toolbarFilters[' . $column->getUniqueId() . ']" style="width: 80%" value="' . $column->getFilterActiveValue() . '" class="daterange" />';
                         } else {
                             $htmlFilter = '<input type="text" name="toolbarFilters[' . $column->getUniqueId() . ']" style="width: 80%" value="' . $column->getFilterActiveValue() . '" />';
                         }
